fix(FontInspector): restrict sticky inspector to desktop, allow details to push content on mobile

--- a/components/FontInspector/FontInspector.module.scss
+++ b/components/FontInspector/FontInspector.module.scss
@@ -1,5 +1,4 @@
 .symbolInspector {
-  position: relative;
   display: grid;
   grid-template-columns: 1fr;
   max-width: 100vw;
@@ -10,6 +9,8 @@
 }
 
 .accordion {
+  display: flex;
+  flex-direction: column;
   margin-bottom: var(--size-06);
   border: 1px solid var(--color-border-primary);
   background: var(--color-background-primary);
@@ -22,23 +23,18 @@
 }
 
 .inspectorContainer {
-  --header-height: 4rem;
-
-  top: var(--header-height);
-  left: 0;
-  z-index: 2;
-  max-height: calc(100vh - var(--header-height));
   margin-top: var(--size-10);
+  margin-bottom: var(--size-10);
   border: 1px solid var(--color-border-primary);
   background: var(--color-background-primary);
 
   @media (width >= 768px) {
-    position: sticky;
-  }
+    --header-height: 4rem;
 
-  @media (width <= 600px) {
-    margin-top: var(--size-06);
-    padding-bottom: var(--size-08);
+    position: sticky;
+    top: var(--header-height);
+    left: 0;
+    max-height: calc(100vh - var(--header-height));
   }
 }
 
@@ -118,21 +114,6 @@
   gap: var(--size-06);
   padding: var(--size-06);
 
-  @media (width <= 600px) {
-    gap: var(--size-08);
-    padding: var(--size-08) var(--size-04);
-
-    ul {
-      grid-template-columns: 1fr 1fr;
-      gap: var(--size-06);
-
-      li {
-        margin-bottom: var(--size-06);
-        padding: var(--size-04) 0;
-      }
-    }
-  }
-
   h4 {
     margin: var(--size-04) 0;
   }
@@ -147,9 +128,24 @@
     }
 
     li {
-      margin-bottom: var(--size-04);
-      padding: var(--size-02) 0;
       list-style: none;
+    }
+  }
+}
+
+@media (width <= 1000px) {
+  .anatomyControls {
+    gap: var(--size-08);
+    padding: var(--size-08) var(--size-04);
+
+    ul {
+      grid-template-columns: 1fr 1fr;
+      gap: var(--size-02);
+
+      li {
+        margin-bottom: var(--size-06);
+        padding: var(--size-04) 0;
+      }
     }
   }
 }
@@ -275,7 +271,7 @@
   }
 }
 
-@media (width >= 1000px) {
+@media screen and (width >= 1000px) {
   .articleContent aside {
     display: grid;
     grid-template-columns: 1fr 1fr;
